--- a/tgen/css/MetadataForm.css
+++ b/tgen/css/MetadataForm.css
@@ -69,6 +69,26 @@ header.presentation_header {
 	font-size: 30px;
 }
 
+.presentation_header .gethelpButton {
+  background-color: #e7e7e7; /* Green */
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  width: 150px;
+  height: 50px;
+  left: 80%;
+  top: 2%;
+  position: fixed;
+}
+
+.presentation_header .gethelpButton:hover {
+    background:#00868B;
+    color:white;
+}
 /*=================Start table=============*/
 .spreadsheet{
 	position: absolute;
