--- a/tgen/css/ErrorPage.css
+++ b/tgen/css/ErrorPage.css
@@ -121,22 +121,15 @@ header.presentation_header {
     width: 350px;
 }
 .package_side {
-	margin-top:130px;
-  position: absolute;
-	margin-left:40px;
-	width: 200px;
-	height: 30px;
-	background-color: white;
-	text-align:center;
-	color: black;
-	font-size: 20px;
+	width: 220px;
+	height: 35px;
+	background:#00868B;
+	color: white;
+	font-size: 23px;
 	border-radius: 20px;
-	border:2px solid #00868B;
-
 }
-
 .package_side:hover {
-	background:#AEEEEE;
+  background:#AEEEEE;
 	color:white;
 }
 
